# vectordb-samples

./: .env.sample  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
scripts/: run.sh
